# extmem-lfr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLocal.cmake  DegreeDistributionCheck.h  Doxyfile.in  EdgeVector.h  HavelHakimiGenerator.cpp  HavelHakimiGenerator.h  HavelHakimiGeneratorRLE.h  PowerlawDegreeSequence.cpp  PowerlawDegreeSequence.h  README.md  RandomStream.cpp  Swaps.h  benchmark.cpp  cm_benchmark.sh  cm_benchmark_multiplot.gnuplot  cm_benchmark_multiplot.gp  cm_data.cpp  cm_datageneration.sh  cm_gnuplot.sh  cm_hh_data_metis.cpp  compare_graph.cpp  defs.h  graph_analyze.sh  graph_generic_networkit.py  graphmetrics_data_generation.sh  hh_cm_emes_convergence_benchmark.sh  hh_cm_memes_emes_graphmetrics.sh  hh_cm_memes_graphmetrics.sh  hh_demo.py  hh_emes_graphmetrics.sh  hh_graphmetrics.sh  hungtest.cpp  main_arewethereyet.cpp  main_benchmark.cpp  main_cm_benchmark.cpp  main_cm_emtfp_convergence.cpp  main_count_distribution.cpp  (+10 more)
LFR/: CommunityEdgeRewiringSwaps.h  GlobalRewiringSwapGenerator.cpp  GlobalRewiringSwapGenerator.h  LFRCommunityAssignBenchmark.h  LFR_comgen.cpp  LFR_global_gen.cpp
experiments/: boxplot.py  cluster_with_networkit.py  cluster_with_networkit.sh  comassign_bench.gp  comassign_bench.py  comassign_bench.sh  compute_add_metrics.py  compute_cluster.py  compute_cluster.sh  dep_infos.sh  filter_single_seed.py  gen_only.py  gen_only.sh  plot_boxplot.gp  plot_clusters.gp  plot_clusters.sh  powerlaw_pop_count.gp  powerlaw_pop_count.sh  rewiring_conv.sh  rewiring_conv_anal.sh  rewiring_conv_global.gp  rewiring_conv_local.gp  rewiring_conv_rate.py  runtime_bench_es.gp  runtime_bench_es.sh  runtime_bench_lfr.gp  runtime_bench_lfr.sh  tfp_scale
include/: BoolStream.h  BoolStream.hpp  CluewebReader.cpp  CluewebReader.h  ConfigurationModel.h  ConfigurationModel.h.cp  DegreeStream.h  DistributionCount.h  EdgeExistenceInformation.h  EdgeStream.h  EdgeSwapBase.h  EdgeSwapFullyInternal.hpp  EdgeSwapInternalSwaps.cpp  EdgeSwapInternalSwaps.h  EdgeSwapInternalSwaps.hpp  EdgeSwapTFP.cpp  EdgeSwapTFP.hpp  EdgeVector.cpp  EdgeVectorCache.cpp  EdgeVectorCache.h  EdgeVectorUpdateStream.hpp  GenericComparator.h  HavelHakimiGenerator.cpp  HavelHakimiGeneratorRLE.cpp  HavelHakimiGeneratorRLE.h  IMGraph.cpp  IMGraph.h  IMGraphWrapper.h  PQSorterMerger.h  PQSorterMerger.hpp  ParallelBufferedPQSorterMerger.h  PowerlawDegreeSequence.cpp  PowerlawDegreeSequence.h  RandomIntervalTree.h  RandomStream.h  SwapGenerator.h  SwapGenerator.hpp  SwapStream.h  Swaps.h  SyncWorker.h  (+2 more)
include/ConfigurationModel/: ConfigurationModel.cpp  ConfigurationModelRandom.h  MultiNodeGenerator.cpp
include/Curveball/: CurveballHelper.h  EMCurveball.h  EMDualContainer.h  EMMessageContainer.h  EMTargetInformation.h  IMAdjacencyList.cpp  IMAdjacencyList.h  IMMacrochunk.h
include/EdgeSwaps/: EdgeSwapBase.h  EdgeSwapFullyInternal.h  EdgeSwapInternalSwaps.cpp  EdgeSwapInternalSwaps.h  EdgeSwapInternalSwapsBase.cpp  EdgeSwapInternalSwapsBase.h  EdgeSwapInternalSwapsBase_impl.h  EdgeSwapParallelTFP.cpp  EdgeSwapParallelTFP.h  EdgeSwapTFP.cpp  EdgeSwapTFP.h  EdgeVectorUpdateStream.h  IMEdgeSwap.cpp  IMEdgeSwap.h  ModifiedEdgeSwapTFP.cpp  ModifiedEdgeSwapTFP.h  MultiEdgeSwapFullyInternal.h  SemiLoadedEdgeSwapTFP.cpp  SemiLoadedEdgeSwapTFP.h
include/HavelHakimi/: HavelHakimiGenerator.cpp  HavelHakimiGenerator.h  HavelHakimiGeneratorRLE.cpp  HavelHakimiGeneratorRLE.h  HavelHakimiIMGenerator.h  HavelHakimiRIMGenerator.h
include/LFR/: CommunityEdgeRewiringSwaps.cpp  CommunityEdgeRewiringSwaps.h  GlobalRewiringSwapGenerator.cpp  GlobalRewiringSwapGenerator.h  LFR.cpp  LFR.h  LFRCommunityAssignBenchmark.cpp  LFRCommunityAssignBenchmark.h  LFR_comassign.cpp  LFR_comgen.cpp  LFR_global_gen.cpp  LFR_merge_community_and_global.cpp  LFR_verify.cpp
include/Utils/: AlignedRNGs.h  AsyncPusher.h  AsyncStream.h  CRCHash.h  EdgeToEdgeSwapPusher.h  ExportGraph.h  FloatDistributionCount.h  Hashfuncs.h  IOStatistics.h  IntSort.h  MonotonicPowerlawRandomStream.h  MonotonicUniformRandomStream.h  NodeHash.h  RandomBoolStream.h  RandomIntervalTree.h  RandomSeed.cpp  RandomSeed.h  ScopedTimer.h  SegmentTree.h  StableAssert.h  StreamPusher.h  StreamPusherRedirectStream.h  SwapGen.h  ThrillBinaryReader.h  UniformRandomStream.h  export_metis.h  export_thrill_binary.h
loewe/: README  build  build_before
related_work/binary_networks/Sources/: benchm.cpp  set_parameters.cpp
related_work/gengraph/: Makefile  mr-connected.cpp
related_work/gengraph/include/: degree_sequence.cpp  degree_sequence.h  graph_molloy_hash.cpp  graph_molloy_hash.h  graph_molloy_optimized.cpp  graph_molloy_optimized.h
related_work/weighted_networks/Sources/: benchm.cpp  binary_benchm.cpp
test/: CMakeLists.txt  TestAdjacencyList.cpp  TestAsyncStream.cpp  TestBoolStream.cpp  TestCommunityRewiring.cpp  TestConfigurationModel.cpp  TestCurveball.cpp  TestDistributionCount.cpp  TestDistributionCount.h  TestDualContainer.cpp  TestEdgeStream.cpp  TestEdgeSwap.cpp  TestEdgeSwapCross.cpp  TestHashing.cpp  TestHavelHakimiGenerator.cpp  TestHavelHakimiGenerator.h  TestHavelHakimiIMGenerator.cpp  TestHavelHakimiRIMGenerator.cpp  TestIntSort.cpp  TestMacrochunk.cpp  TestMessageContainer.cpp  TestMonotonicPowerlawRandomStream.cpp  TestMonotonicUniformRandomStream.cpp  TestNewEdgeSwapTFP.cpp  TestNewFullyInternal.cpp  TestParallelBufferedPQSorterMerger.cpp  TestPowerlawDegreeSequence.cpp  TestPowerlawDegreeSequence.h  TestPrioritiQueue.h  TestPriorityQueue.cpp  TestRandomIntervalTree.cpp  TestSegmentTree.cpp  TestSemiLoadedSwaps.cpp  TestSwapGenerator.cpp  TestSwapGenerator.h  TestTupleHelper.cpp  main_random.cpp  main_sorter.cpp
test/otherTestfiles/: TestBoolStream.cpp  TestCommunityRewiring.cpp  TestEdgeSwapCross.cpp  TestHavelHakimiRIMGenerator.cpp  TestMonotonicUniformRandomStream.cpp  TestTupleHelper.cpp
tools/: compare_degree_dists  compare_degree_dists.gp  hh_bench_sweep  stat.pl  sum_stats.pl  visualise_sweep  visualise_sweep.gp
